--- a/music/index.html
+++ b/music/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <img src="music_list.png" alt="image">
+  <img src="./music_list.png" alt="image">
 </body>
 </html>
